--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,106 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<!--<ion-menu side="start" content-id="main-content">
+    <ion-header>
+        <ion-toolbar translucent>
+            <ion-title>Menu</ion-title>
+        </ion-toolbar>
+    </ion-header>
+    <ion-content>
+        <ion-list>
+            <ion-item>
+                <ion-icon name="mail" slot="start"></ion-icon>
+                <ion-label>Nos Menus</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-icon name="paper-plane" slot="start"></ion-icon>
+                <ion-label>Nos Burgers</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-icon name="heart" slot="start"></ion-icon>
+                <ion-label>Nos Compliments</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-icon name="archive" slot="start"></ion-icon>
+                <ion-label>Mon Profil</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-icon name="trash" slot="start"></ion-icon>
+                <ion-label>Mes commandes</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-icon name="warning" slot="start"></ion-icon>
+                <ion-label>Deconnexion</ion-label>
+            </ion-item>
+        </ion-list>
+    </ion-content>
+</ion-menu>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<div class="ion-page" id="main-content">
+    <ion-header>
+        <ion-toolbar>
+            <ion-buttons slot="start">
+                <ion-menu-button></ion-menu-button>
+            </ion-buttons>
+            <ion-title>Inbox</ion-title>
+        </ion-toolbar>
+    </ion-header>
+    <ion-content class="ion-padding">
+        <ion-button expand="block" onclick="openMenu()">Open Menu</ion-button>
+    </ion-content>
+</div>-->
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
-</ion-content>
+<div class="h-100 border">
+    <ion-header>
+        <ion-toolbar>
+            <ion-title>Brasil Burger</ion-title>
+        </ion-toolbar>
+    </ion-header>
+    <ion-content fullscreen>
+        <ion-slides>
+            <ion-slide>
+                <ion-card>
+                    <img src="./assets/images/burger-spread-four-hands.jpg" />
+                    <div class="segment">
+                        <ion-segment color="warning" scrollable (ionChange)="segmentChanged($event)" value="grille">
+                            <ion-segment-button value="grid" class="bouton" layout="icon-end">
+                                <ion-icon name="apps-outline"></ion-icon>
+                            </ion-segment-button>
+                            <ion-segment-button value="list" class="bouton" layout="icon-end">
+                                <ion-icon name="list-outline"></ion-icon>
+                            </ion-segment-button>
+                        </ion-segment>
+                        <app-catalogue *ngIf="segment=='grid'"></app-catalogue>
+                        <app-catalogue-list *ngIf="segment=='list'"></app-catalogue-list>
+                    </div>
+                </ion-card>
+            </ion-slide>
+            <ion-slide>
+                <ion-grid>
+                    <img src="./assets/images/burger-spread-four-hands.jpg" />
+                    <ion-row>
+                        <ion-col>
+                            <ion-item>
+                                <ion-label position="fixed">Login</ion-label>
+                                <ion-input placeholder="Login"></ion-input>
+                            </ion-item>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col>
+                            <ion-item>
+                                <ion-label position="fixed">Mot de passe</ion-label>
+                                <ion-input placeholder="Password"></ion-input>
+                            </ion-item>
+                        </ion-col>
+                    </ion-row>
+                    <ion-row>
+                        <ion-col>
+                            <ion-item>
+                                <ion-button color="success" (click)="login()">Se connecter</ion-button>
+                            </ion-item>
+                        </ion-col>
+                    </ion-row>
+                </ion-grid>
+            </ion-slide>
+        </ion-slides>
+    </ion-content>
+</div>
