--- a/src/app/livreur/livraison/livraison.page.html
+++ b/src/app/livreur/livraison/livraison.page.html
@@ -11,7 +11,7 @@
             </ion-label>
         </ion-item>
         <ion-item-options>
-            <ion-item-option color="primary">
+            <ion-item-option color="primary" (click)="startScan()">
                 <ion-icon name="qr-code-outline"></ion-icon>
                 QR code
             </ion-item-option>
@@ -21,4 +21,23 @@
             </ion-item-option>
         </ion-item-options>
     </ion-item-sliding>
+    <video #video [hidden]="!scanActive" width="100%"></video>
+
+    <!-- Used to render the camera stream images -->
+    <canvas #canvas hidden></canvas>
+
+    <!-- Stop our scanner preview if active -->
+    <ion-button expand="full" (click)="stopScan()" color="danger" *ngIf="scanActive">
+        <ion-icon slot="start" name="close"></ion-icon>
+        Stop scan
+    </ion-button>
+
+    <ion-card *ngIf="scanResult">
+        <ion-card-header>
+            <ion-card-title>QR Code</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+            {{ scanResult }}
+        </ion-card-content>
+    </ion-card>
 </ion-content>
